# LEOSPINE

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
InputData/: rck_2025001.txt  rckdt_2025001.txt  test.tle  test_Iridium.tle  test_con.tle
app/: __init__.py  czml.py  gui.py  gui_qt.py  settings.py  webserver.py
app/styles/: dark.qss  light.qss
app/web/: config.json  data.czml  index.html  theme.json
core/: __init__.py  constellation.py  positioning.py  sim_data.py  utilities.py
datasets/result/: observations.csv
docs/: api.md  architecture.md  index.md  setup.md  user_guide.md
tests/: __init__.py  conftest.py  test_constellation.py  test_imports.py  test_sim_obs_smoke.py  test_utilities.py
tools/: __init__.py  run_positioning.py  sim_obs.py
